# AstraIRC

./: .gitignore  AstraIRC_LuminaCore_ROADMAP.md  AstraIRC_ROADMAP.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  LuminaCore_HIERARCHY.md  LuminaCore_ROADMAP.md  README.md  SETUP.md  VERSION_MANAGEMENT.md  WINDOWS_PACKAGING.md  package-linux-release.sh  package-windows-release.ps1  update-version.sh  vcpkg-configuration.json  vcpkg.json
.github/: PRERELEASE.md
.github/workflows/: ci.yml  release.yml
src/: AppSettings.h  ChannelPage.cpp  ChannelPage.h  MainFrame.cpp  MainFrame.h  ServerConnectionPanel.cpp  ServerConnectionPanel.h  UserInfo.h  UserProfileDialog.cpp  UserProfileDialog.h  irc_core.cpp  irc_core.h  main.cpp
